ローカライゼーションの追加

--- a/localisation/japanese/countries_asia/geacps_JOR_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_JOR_l_japanese.yml
@@ -2,6 +2,7 @@
 #国家方針
  JOR_focus_tree:0 "[ROOT.GetName]の国家方針"
  JOR_signing_london_treaty:0 "ロンドン条約の締結"
+ JOR_signing_london_treaty_desc:0 "TODO"
 
 #国民精神
  
