--- a/localisation/japanese/countries_new_continent/geacps_ARG_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_ARG_l_japanese.yml
@@ -2,49 +2,94 @@
 #国家方針
  ARG_focus_tree:0 "[ROOT.GetName]の国家方針"
  ARG_army_realignment:0 "陸軍再編"
+ ARG_army_realignment_desc:0 "TODO"
  ARG_army_organization:0 "陸軍編成"
+ ARG_army_organization_desc:0 "TODO"
  ARG_guidance_on_the_development_of_cas:0 "近接航空支援機の開発指導"
+ ARG_guidance_on_the_development_of_cas_desc:0 "TODO"
  ARG_armoured_vehicles_to_protect_us:0 "我らを守る装甲車"
+ ARG_armoured_vehicles_to_protect_us_desc:0 "TODO"
  ARG_goddess_of_war:0 "戦場の女神"
+ ARG_goddess_of_war_desc:0 "TODO"
  ARG_crush_the_sky:0 "空を粉砕する"
+ ARG_crush_the_sky_desc:0 "TODO"
  ARG_modern_infantry_rifles:0 "近代的な歩兵銃"
+ ARG_modern_infantry_rifles_desc:0 "TODO"
  ARG_improved_support_equipment:0 "支援装備の充実化"
+ ARG_improved_support_equipment_desc:0 "TODO"
  ARG_antiarmour_equipment:0 "対装甲兵器用装備"
+ ARG_antiarmour_equipment_desc:0 "TODO"
  ARG_air_force_realignment:0 "空軍再建"
+ ARG_air_force_realignment_desc:0 "TODO"
  ARG_german_military_officer_in_exile_to_our_country:0 "亡命ドイツ軍人を我が国に"
+ ARG_german_military_officer_in_exile_to_our_country_desc:0 "TODO"
  ARG_pilot_training:0 "パイロット訓練"
+ ARG_pilot_training_desc:0 "TODO"
  ARG_february_election:0 "2月選挙"
+ ARG_february_election_desc:0 "TODO"
  ARG_labour_party:0 "労働党"
+ ARG_labour_party_desc:0 "TODO"
  ARG_enacted_the_evita_act:0 "エビタ法を制定"
+ ARG_enacted_the_evita_act_desc:0 "TODO"
  ARG_oppression_of_dissenters:0 "反対者の弾圧"
+ ARG_oppression_of_dissenters_desc:0 "TODO"
  ARG_establishment_of_the_eva_peron_foundation:0 "エバ・ペロン財団の設立"
+ ARG_establishment_of_the_eva_peron_foundation_desc:0 "TODO"
  ARG_launch_of_the_five_year_plan:0 "五ヵ年計画の発動"
+ ARG_launch_of_the_five_year_plan_desc:0 "TODO"
  ARG_suburban_industrial_park_developments_ii:0 "郊外の工業団地開発"
+ ARG_suburban_industrial_park_developments_ii_desc:0 "TODO"
  ARG_railway_construction:0 "鉄道敷設"
+ ARG_railway_construction_desc:0 "TODO"
  ARG_suburban_industrial_park_developments:0 "郊外の工業団地開発"
+ ARG_suburban_industrial_park_developments_desc:0 "TODO"
  ARG_declaration_of_economic_independence:0 "経済的独立宣言"
+ ARG_declaration_of_economic_independence_desc:0 "TODO"
  ARG_nationalisation_of_private_banks:0 "民間銀行の国有化"
+ ARG_nationalisation_of_private_banks_desc:0 "TODO"
  ARG_contributions_to_housing_construction:0 "住宅建設に献金"
+ ARG_contributions_to_housing_construction_desc:0 "TODO"
  ARG_establishment_of_the_national_atomic_energy_commission:0 "国立原子力委員会の設立"
+ ARG_establishment_of_the_national_atomic_energy_commission_desc:0 "TODO"
  ARG_trade_unipolarisation:0 "貿易の一極化"
+ ARG_trade_unipolarisation_desc:0 "TODO"
  ARG_improved_public_health:0 "公衆衛生の改善"
+ ARG_improved_public_health_desc:0 "TODO"
  ARG_free_university:0 "大学の無料化"
+ ARG_free_university_desc:0 "TODO"
  ARG_emergency_citizens_alliance:0 "急進市民同盟"
+ ARG_emergency_citizens_alliance_desc:0 "TODO"
  ARG_transition_to_a_fairer_society:0 "公平社会への移行"
+ ARG_transition_to_a_fairer_society_desc:0 "TODO"
  ARG_cooperation_with_GBR:0 "[GBR.GetAdjective]との協力"
+ ARG_cooperation_with_GBR_desc:0 "TODO"
  ARG_approached_to_join_GBR_faction:0 "[GBR.GetFactionName]への加盟を打診"
+ ARG_approached_to_join_GBR_faction_desc:0 "TODO"
  ARG_suburban_industrial_park_developments:0 "郊外の工業団地開発"
+ ARG_suburban_industrial_park_developments_desc:0 "TODO"
  ARG_further_development_of_heavy_industry:0 "重工業の更なる発展"
+ ARG_further_development_of_heavy_industry_desc:0 "TODO"
  ARG_somisa_established:0 "Somisaの設立"
+ ARG_somisa_established_desc:0 "TODO"
  ARG_ime_established:0 "IMEの設立"
+ ARG_ime_established_desc:0 "TODO"
  ARG_ime_factory_construction:0 "IMEの工場建設"
+ ARG_ime_factory_construction_desc:0 "TODO"
  ARG_protecting_south_america:0 "南米を守護する"
+ ARG_protecting_south_america_desc:0 "TODO"
  ARG_neighbouring_state:0 "隣国"
+ ARG_neighbouring_state_desc:0 "TODO"
  ARG_strong_alliances:0 "強固な同盟を！"
+ ARG_strong_alliances_desc:0 "TODO"
  ARG_to_the_north:0 "北へ"
+ ARG_to_the_north_desc:0 "TODO"
  ARG_alliance_unity:0 "同盟の結束を！"
+ ARG_alliance_unity_desc:0 "TODO"
  ARG_establishment_of_the_institute:0 "研究所の設立"
+ ARG_establishment_of_the_institute_desc:0 "TODO"
  ARG_new_railway_network:0 "新規鉄道網の整備"
+ ARG_new_railway_network_desc:0 "TODO"
+ 
 
 #国民精神
  ARG_oppression_of_dissenters:0 "反対者の弾圧"
