--- a/localisation/japanese/countries_new_continent/geacps_DXL_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_DXL_l_japanese.yml
@@ -2,78 +2,78 @@
 #国家方針
  DXL_focus_tree:0 "[ROOT.GetName]の国家方針"
  DXL_yellow_peril_theory:0 "黄禍論"
- DXL_yellow_peril_theory_desc:0 ""
+ DXL_yellow_peril_theory_desc:0 "TODO"
  DXL_beyond_ALS:0 "アラスカを超えて"
- DXL_beyond_ALS_desc:0 ""
+ DXL_beyond_ALS_desc:0 "TODO"
  DXL_armed_uprising:0 "武装蜂起"
- DXL_armed_uprising_desc:0 ""
+ DXL_armed_uprising_desc:0 "TODO"
  DXL_done_with_USA:0 "合衆国は懲り懲りだ"
- DXL_done_with_USA_desc:0 ""
+ DXL_done_with_USA_desc:0 "TODO"
  DXL_revive_the_slave_law:0 "奴隷法の再興"
- DXL_revive_the_slave_law_desc:0 ""
+ DXL_revive_the_slave_law_desc:0 "TODO"
  DXL_construct_forced_labor_camps:0 "強制労働所の建設"
- DXL_construct_forced_labor_camps_desc:0 ""
+ DXL_construct_forced_labor_camps_desc:0 "TODO"
  DXL_cease_assets_of_foreign_companies:0 "外国企業の資産を押収"
- DXL_cease_assets_of_foreign_companies_desc:0 ""
+ DXL_cease_assets_of_foreign_companies_desc:0 "TODO"
  DXL_destroy_the_stock_exchange:0 "証券取引所を破壊"
- DXL_destroy_the_stock_exchange_desc:0 ""
+ DXL_destroy_the_stock_exchange_desc:0 "TODO"
  DXL_nationalize_the_industry:0 "企業の国有化"
- DXL_nationalize_the_industry_desc:0 ""
+ DXL_nationalize_the_industry_desc:0 "TODO"
  DXL_military_economy:0 "軍事経済"
- DXL_military_economy_desc:0 ""
+ DXL_military_economy_desc:0 "TODO"
  DXL_resume_plantation:0 "プランテーションを再開"
- DXL_resume_plantation_desc:0 ""
+ DXL_resume_plantation_desc:0 "TODO"
  DXL_for_a_united_america:0 "アメリカ統一に向けて"
- DXL_for_a_united_america_desc:0 ""
+ DXL_for_a_united_america_desc:0 "TODO"
  DXL_annex_TEX:0 "テキサス併合"
- DXL_annex_TEX_desc:0 ""
+ DXL_annex_TEX_desc:0 "TODO"
  DXL_operation_blue:0 "ブルー作戦"
- DXL_operation_blue_desc:0 ""
+ DXL_operation_blue_desc:0 "TODO"
  DXL_operation_red:0 "レッド作戦"
- DXL_operation_red_desc:0 ""
+ DXL_operation_red_desc:0 "TODO"
  DXL_secure_the_west_coast:0 "西海岸を確保"
- DXL_secure_the_west_coast_desc:0 ""
+ DXL_secure_the_west_coast_desc:0 "TODO"
  DXL_cooperate_with_the_new_empire:0 "新帝国との協力"
- DXL_cooperate_with_the_new_empire_desc:0 ""
+ DXL_cooperate_with_the_new_empire_desc:0 "TODO"
  DXL_american_supremacy:0 "アメリカ至上主義"
- DXL_american_supremacy_desc:0 ""
+ DXL_american_supremacy_desc:0 "TODO"
  DXL_annex_former_territory:0 "旧領を割譲"
- DXL_annex_former_territory_desc:0 ""
+ DXL_annex_former_territory_desc:0 "TODO"
  DXL_forced_emigration:0 "強制移住"
- DXL_forced_emigration_desc:0 ""
+ DXL_forced_emigration_desc:0 "TODO"
  DXL_attack_local_governments:0 "地方自治政府を攻撃"
- DXL_attack_local_governments_desc:0 ""
+ DXL_attack_local_governments_desc:0 "TODO"
  DXL_hang_the_communists:0 "共産主義者を処刑"
- DXL_hang_the_communists_desc:0 ""
+ DXL_hang_the_communists_desc:0 "TODO"
  DXL_second_times_the_charm:0 "二回目の正直"
- DXL_second_times_the_charm_desc:0 ""
+ DXL_second_times_the_charm_desc:0 "TODO"
  DXL_join_the_western_european_alliance:0 "西欧同盟への加入"
- DXL_join_the_western_european_alliance_desc:0 ""
+ DXL_join_the_western_european_alliance_desc:0 "TODO"
  DXL_the_business_of_war:0 "戦争ビジネス"
- DXL_the_business_of_war_desc:0 ""
+ DXL_the_business_of_war_desc:0 "TODO"
  DXL_the_second_paris_conference:0 "二度目のパリ会議を"
- DXL_the_second_paris_conference_desc:0 ""
+ DXL_the_second_paris_conference_desc:0 "TODO"
  DXL_eliminate_the_reds:0 "アカを撃滅"
- DXL_eliminate_the_reds_desc:0 ""
+ DXL_eliminate_the_reds_desc:0 "TODO"
  DXL_make_russia_great_again:0 "強大なロシアを再び"
- DXL_make_russia_great_again_desc:0 ""
+ DXL_make_russia_great_again_desc:0 "TODO"
  DXL_todays_enemy_is_tomorrows_friend:0 "今日の敵は明日の味方"
- DXL_todays_enemy_is_tomorrows_friend_desc:0 ""
+ DXL_todays_enemy_is_tomorrows_friend_desc:0 "TODO"
  DXL_secure_a_strong_leader:0 "強大なリーダーを確保"
- DXL_secure_a_strong_leader_desc:0 ""
+ DXL_secure_a_strong_leader_desc:0 "TODO"
  DXL_american_supremacy_2:0 "アメリカ至上主義"
- DXL_american_supremacy_2_desc:0 ""
+ DXL_american_supremacy_2_desc:0 "TODO"
  DXL_there_is_no_such_thing_as_basic_human_rights:0 "基本的人権は存在せず"
- DXL_there_is_no_such_thing_as_basic_human_rights_desc:0 ""
+ DXL_there_is_no_such_thing_as_basic_human_rights_desc:0 "TODO"
  DXL_southern_lebensraum:0 "南方生存権"
- DXL_southern_lebensraum_desc:0 ""
+ DXL_southern_lebensraum_desc:0 "TODO"
  DXL_strengthen_the_slave_law:0 "奴隷法の強化"
- DXL_strengthen_the_slave_law_desc:0 ""
+ DXL_strengthen_the_slave_law_desc:0 "TODO"
  DXL_make_up_for_lost_cause:0 "雪辱を晴らす"
- DXL_make_up_for_lost_cause_desc:0 ""
+ DXL_make_up_for_lost_cause_desc:0 "TODO"
  DXL_abolish_the_oldest_empire:0 "最古の王朝を断絶"
- DXL_abolish_the_oldest_empire_desc:0 ""
+ DXL_abolish_the_oldest_empire_desc:0 "TODO"
  DXL_protect_the_empire_from_collapse:0 "皇國の崩壊を防ぐ"
- DXL_protect_the_empire_from_collapse_desc:0 ""
+ DXL_protect_the_empire_from_collapse_desc:0 "TODO"
  DXL_demand_a_return_for_support:0 "支援の見返りを要求"
- DXL_demand_a_return_for_support_desc:0 ""
+ DXL_demand_a_return_for_support_desc:0 "TODO"
