--- a/localisation/japanese/countries_africa/geacps_EGY_l_japanese.yml
+++ b/localisation/japanese/countries_africa/geacps_EGY_l_japanese.yml
@@ -2,109 +2,214 @@
 #国家方針
  EGY_focus_tree:0 "[ROOT.GetName]の国家方針"
  EGY_survival_of_monarchy:0 "王政の存続"
+ EGY_survival_of_monarchy_desc:0 "TODO"
  EGY_royal_foundation:0 "王室財団"
+ EGY_royal_foundation_desc:0 "TODO"
  EGY_cairo_national_museum:0 "カイロ国立博物館"
+ EGY_cairo_national_museum_desc:0 "TODO"
  EGY_hold_a_parliamentary_session:0 "議会を開く"
+ EGY_hold_a_parliamentary_session_desc:0 "TODO"
  EGY_lifting_ban_on_strikes:0 "ストライキの解禁"
+ EGY_lifting_ban_on_strikes_desc:0 "TODO"
  EGY_development_of_insurance_system:0 "保険制度の整備"
+ EGY_development_of_insurance_system_desc:0 "TODO"
  EGY_democratic_constitutional_reform:0 "民主的改憲"
+ EGY_democratic_constitutional_reform_desc:0 "TODO"
  EGY_utilization_GBR_connections:0 "[GBR.GetAdjective]のコネクションを利用"
+ EGY_utilization_GBR_connections_desc:0 "TODO"
  EGY_revolution_made:0 "革命はなされた！"
+ EGY_revolution_made_desc:0 "TODO"
  EGY_new_constitution:0 "新たな憲法"
+ EGY_new_constitution_desc:0 "TODO"
  EGY_utilization_of_royal_property:0 "王室財産の活用"
+ EGY_utilization_of_royal_property_desc:0 "TODO"
  EGY_free_officers_movement:0 "自由将校団"
+ EGY_free_officers_movement_desc:0 "TODO"
  EGY_nasser_guidance:0 "ナセルの指導"
+ EGY_nasser_guidance_desc:0 "TODO"
  EGY_weapons_from_CZE:0 "[CZE.GetAdjective]からの武器"
+ EGY_weapons_from_CZE_desc:0 "TODO"
  EGY_socialist_division:0 "社会主義者の分断"
+ EGY_socialist_division_desc:0 "TODO"
  EGY_incite_nationalism:0 "民族主義を焚きつける"
+ EGY_incite_nationalism_desc:0 "TODO"
  EGY_communist_party:0 "共産党"
+ EGY_communist_party_desc:0 "TODO"
  EGY_faction_integration:0 "派閥の統合"
+ EGY_faction_integration_desc:0 "TODO"
  EGY_penetration_to_workers:0 "労働者への浸透"
+ EGY_penetration_to_workers_desc:0 "TODO"
  EGY_grasp_of_military:0 "軍人の掌握"
+ EGY_grasp_of_military_desc:0 "TODO"
  EGY_diplomacy_diversion:0 "外交転換"
+ EGY_diplomacy_diversion_desc:0 "TODO"
  EGY_to_western_bloc:0 "西側へ"
+ EGY_to_western_bloc_desc:0 "TODO"
  EGY_talks_with_ISR:0 "[ISR.GetAdjective]との会談"
+ EGY_talks_with_ISR_desc:0 "TODO"
  EGY_settlement:0 "和解"
+ EGY_settlement_desc:0 "TODO"
  EGY_join_western_bloc:0 "西側陣営へ"
+ EGY_join_western_bloc_desc:0 "TODO"
  EGY_from_the_arab_to_world:0 "アラブ世界から"
+ EGY_from_the_arab_to_world_desc:0 "TODO"
  EGY_independence_of_arab_world:0 "アラブ世界の独立"
+ EGY_independence_of_arab_world_desc:0 "TODO"
  EGY_overthrow:0 "打倒"
+ EGY_overthrow_desc:0 "TODO"
  EGY_leader_of_middle_east:0 "中東の盟主"
+ EGY_leader_of_middle_east_desc:0 "TODO"
  EGY_cairo_conference:0 "カイロ会談"
+ EGY_cairo_conference_desc:0 "TODO"
  EGY_to_eastern_bloc:0 "東側へ"
+ EGY_to_eastern_bloc_desc:0 "TODO"
  EGY_certain_distance:0 "一定の距離"
+ EGY_certain_distance_desc:0 "TODO"
  EGY_nonmilitary_exchange:0 "非軍事的交流"
+ EGY_nonmilitary_exchange_desc:0 "TODO"
  EGY_as_nonaligned_nation:0 "非同盟国家として"
+ EGY_as_nonaligned_nation_desc:0 "TODO"
  EGY_railroad_from_HUN:0 "$HUN_ADJ$からの鉄道"
+ EGY_railroad_from_HUN_desc:0 "TODO"
  EGY_friendship_with_YUG:0 "[YUG.GetAdjective]との交流"
+ EGY_friendship_with_YUG_desc:0 "TODO"
  EGY_arab_socialism:0 "アラブ式社会主義へ"
+ EGY_arab_socialism_desc:0 "TODO"
  EGY_joining_baath_party:0 "バアス党との合流"
+ EGY_joining_baath_party_desc:0 "TODO"
  EGY_request_to_PER:0 "[PER.GetAdjective]への要求"
+ EGY_request_to_PER_desc:0 "TODO"
  EGY_arab_recovery:0 "アラブの回収"
+ EGY_arab_recovery_desc:0 "TODO"
  EGY_end_of_war_economy:0 "戦争景気の終了"
+ EGY_end_of_war_economy_desc:0 "TODO"
  EGY_support_for_misr_group:0 "ミスル・グループへの支援"
+ EGY_support_for_misr_group_desc:0 "TODO"
  EGY_nationalization_of_industry:0 "産業の国有化"
+ EGY_nationalization_of_industry_desc:0 "TODO"
  EGY_economic_management_agency:0 "経済管理庁"
+ EGY_economic_management_agency_desc:0 "TODO"
  EGY_steering_toward_liberalization:0 "自由化への舵取り"
+ EGY_steering_toward_liberalization_desc:0 "TODO"
  EGY_support_for_company_start_up:0 "企業立ち上げの支援"
+ EGY_support_for_company_start_up_desc:0 "TODO"
  EGY_achieve_increase_in_domestic_demand:0 "内需増加を達成"
+ EGY_achieve_increase_in_domestic_demand_desc:0 "TODO"
  EGY_egyptian_economic_independence_plan:0 "エジプト経済の独立計画"
+ EGY_egyptian_economic_independence_plan_desc:0 "TODO"
  EGY_establishment_of_modern_banks:0 "近代式銀行の設立"
+ EGY_establishment_of_modern_banks_desc:0 "TODO"
  EGY_subsidies_for_islamic_banks:0 "イスラム銀行への補助"
+ EGY_subsidies_for_islamic_banks_desc:0 "TODO"
  EGY_promoting_entrepreneurship_to_wealthy:0 "国内産業の起業を促進"
+ EGY_promoting_entrepreneurship_to_wealthy_desc:0 "TODO"
  EGY_regulation_of_foreigninvested_enterprises:0 "外資企業の規制"
+ EGY_regulation_of_foreigninvested_enterprises_desc:0 "TODO"
  EGY_investment_in_cotton_industry:0 "綿花産業への投資"
+ EGY_investment_in_cotton_industry_desc:0 "TODO"
  EGY_modernization_of_agriculture:0 "農業の近代化"
+ EGY_modernization_of_agriculture_desc:0 "TODO"
  EGY_construction_of_nile_dam:0 "ナイルダムの建造"
+ EGY_construction_of_nile_dam_desc:0 "TODO"
  EGY_the_second_plan:0 "第二の計画"
+ EGY_the_second_plan_desc:0 "TODO"
  EGY_suez_canal:0 "スエズ運河"
+ EGY_suez_canal_desc:0 "TODO"
  EGY_nationalization_of_canal:0 "運河の国有化"
+ EGY_nationalization_of_canal_desc:0 "TODO"
  EGY_monopoly_on_stocks:0 "株の独占"
+ EGY_monopoly_on_stocks_desc:0 "TODO"
  EGY_suez_management_agency:0 "スエズ管理庁"
+ EGY_suez_management_agency_desc:0 "TODO"
  EGY_tourism_industry:0 "観光産業"
+ EGY_tourism_industry_desc:0 "TODO"
  EGY_cairo_airport:0 "カイロ空港"
+ EGY_cairo_airport_desc:0 "TODO"
  EGY_reminder_to_GBR_FRA:0 "英仏への督促"
+ EGY_reminder_to_GBR_FRA_desc:0 "TODO"
  EGY_assiut_agreement:0 "アシュート協定"
+ EGY_assiut_agreement_desc:0 "TODO"
  EGY_development_of_red_sea_coast:0 "紅海沿岸の開発"
+ EGY_development_of_red_sea_coast_desc:0 "TODO"
  EGY_overseas_worker:0 "在外労働者"
+ EGY_overseas_worker_desc:0 "TODO"
  EGY_gather_immigrants:0 "移民を集う"
+ EGY_gather_immigrants_desc:0 "TODO"
  EGY_promote_influx:0 "流入を促進"
+ EGY_promote_influx_desc:0 "TODO"
  EGY_simplification_of_passport_applications:0 "パスワード申請の簡略化"
+ EGY_simplification_of_passport_applications_desc:0 "TODO"
  EGY_encourage_job_growth:0 "雇用増加を促進"
+ EGY_encourage_job_growth_desc:0 "TODO"
  EGY_expansion_of_public_works:0 "公共事業の拡大"
+ EGY_expansion_of_public_works_desc:0 "TODO"
  EGY_measures_for_overcrowded_cities:0 "過密都市への対策"
+ EGY_measures_for_overcrowded_cities_desc:0 "TODO"
  EGY_arab_league_conception:0 "アラブ連盟構想"
+ EGY_arab_league_conception_desc:0 "TODO"
  EGY_loose_cooperation:0 "緩やかな協力を"
+ EGY_loose_cooperation_desc:0 "TODO"
  EGY_joint_defence_council:0 "共同防衛理事会"
+ EGY_joint_defence_council_desc:0 "TODO"
  EGY_red_sea_free_agreement:0 "紅海自由協定"
+ EGY_red_sea_free_agreement_desc:0 "TODO"
  EGY_islamic_countries_defense_pact:0 "イスラム諸国防衛協定"
+ EGY_islamic_countries_defense_pact_desc:0 "TODO"
  EGY_strong_coalition_concept:0 "強力な連合構想"
+ EGY_strong_coalition_concept_desc:0 "TODO"
  EGY_pressure_on_LEB:0 "[LEB.GetAdjective]への圧力"
+ EGY_pressure_on_LEB_desc:0 "TODO"
  EGY_national_unity_with_SYR:0 "[SYR.GetAdjective]との国家合同？"
+ EGY_national_unity_with_SYR_desc:0 "TODO"
  EGY_support_PAL:0 "パレスチナ支持を表明"
+ EGY_support_PAL_desc:0 "TODO"
  EGY_middle_east_war:0 "中東戦争？"
+ EGY_middle_east_war_desc:0 "TODO"
  EGY_arab_union:0 "アラブ連合"
+ EGY_arab_union_desc:0 "TODO"
  EGY_military_preparation:0 "エジプトの軍備"
+ EGY_military_preparation_desc:0 "TODO"
  EGY_army_reorganization:0 "陸軍再編"
+ EGY_army_reorganization_desc:0 "TODO"
  EGY_desert_tank:0 "砂漠の戦車"
+ EGY_desert_tank_desc:0 "TODO"
  EGY_formulation_of_doctrine:0 "ドクトリンの策定"
+ EGY_formulation_of_doctrine_desc:0 "TODO"
  EGY_egyptan_fire_powar_warfare:0 "エジプト式火力戦"
+ EGY_egyptan_fire_powar_warfare_desc:0 "TODO"
  EGY_buy_from_GBR:0 "[GBR.GetAdjective]からの購入"
+ EGY_buy_from_GBR_desc:0 "TODO"
  EGY_contract_with_FRA:0 "[FRA.GetAdjective]との契約"
+ EGY_contract_with_FRA_desc:0 "TODO"
  EGY_reform_of_national_military_academy:0 "国立士官学校の改革"
+ EGY_reform_of_national_military_academy_desc:0 "TODO"
  EGY_establishment_of_special_forces:0 "特殊部隊の設立"
+ EGY_establishment_of_special_forces_desc:0 "TODO"
  EGY_weapons_from_eastern_bloc:0 "東側からの武器"
+ EGY_weapons_from_eastern_bloc_desc:0 "TODO"
  EGY_naval_reorganization:0 "海軍再編"
+ EGY_naval_reorganization_desc:0 "TODO"
  EGY_buy_GBR_ships:0 "[GBR.GetAdjective]艦の購入"
+ EGY_buy_GBR_ships_desc:0 "TODO"
  EGY_socotra_joint_exercise:0 "ソコトラ合同演習"
+ EGY_socotra_joint_exercise_desc:0 "TODO"
  EGY_buy_JAP_ships:0 "$JAP_ADJ$艦の購入"
+ EGY_buy_JAP_ships_desc:0 "TODO"
  EGY_exchange_student_agreements:0 "交換留学協定"
+ EGY_exchange_student_agreements_desc:0 "TODO"
  EGY_alexandria_military_port:0 "アレクサンドリア軍港"
+ EGY_alexandria_military_port_desc:0 "TODO"
  EGY_development_of_air_force:0 "空軍の開発"
+ EGY_development_of_air_force_desc:0 "TODO"
  EGY_training_of_pilots:0 "パイロットの育成"
+ EGY_training_of_pilots_desc:0 "TODO"
  EGY_western_bloc:0 "西側から"
+ EGY_western_bloc_desc:0 "TODO"
  EGY_eastern_bloc:0 "東側から"
+ EGY_eastern_bloc_desc:0 "TODO"
  EGY_cairo_air_base:0 "カイロ空軍基地"
+ EGY_cairo_air_base_desc:0 "TODO"
  EGY_air_defence_network_for_whole_country:0 "全土の防空網"
+ EGY_air_defence_network_for_whole_country_desc:0 "TODO"
  EGY_buy_radar:0 "レーダーの購入"
- 
+ EGY_buy_radar_desc:0 "TODO"
