--- a/localisation/japanese/countries_new_continent/geacps_USA_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_USA_l_japanese.yml
@@ -2,73 +2,73 @@
 #focuses
  USA_focus_tree:0 "[ROOT.GetName]の国家方針"
  USA_our_past_glory:0 "古の栄光"
- USA_our_past_glory_desc:0 ""
+ USA_our_past_glory_desc:0 "TODO"
  USA_national_stability_law:0 "国家安定法"
- USA_national_stability_law_desc:0 ""
+ USA_national_stability_law_desc:0 "TODO"
  USA_national_security_law:0 "国家治安維持法"
- USA_national_security_law_desc:0 ""
+ USA_national_security_law_desc:0 "TODO"
  USA_all_out_resistance:0 "徹底抗戦"
- USA_all_out_resistance_desc:0 ""
+ USA_all_out_resistance_desc:0 "TODO"
  USA_restore_the_federal_government:0 "連邦政府の復古"
- USA_restore_the_federal_government_desc:0 ""
+ USA_restore_the_federal_government_desc:0 "TODO"
  USA_the_1947_special_presidential_election:0 "1947年臨時大統領選挙"
- USA_the_1947_special_presidential_election_desc:0 ""
+ USA_the_1947_special_presidential_election_desc:0 "TODO"
  USA_the_chicago_convention:0 "シカゴ会議"
- USA_the_chicago_convention_desc:0 ""
+ USA_the_chicago_convention_desc:0 "TODO"
  USA_rebuild_our_civilian_economy:0 "民間経済の復興"
- USA_rebuild_our_civilian_economy_desc:0 ""
+ USA_rebuild_our_civilian_economy_desc:0 "TODO"
  USA_the_3rd_indian_removal_act:0 "第三次インディアン移住法"
- USA_the_3rd_indian_removal_act_desc:0 ""
+ USA_the_3rd_indian_removal_act_desc:0 "TODO"
  USA_24_hour_stock_market_activity:0 "株式市場の２４時間運用"
- USA_24_hour_stock_market_activity_desc:0 ""
+ USA_24_hour_stock_market_activity_desc:0 "TODO"
  USA_rebuild_washington_d_c:0 "ワシントンを復興"
- USA_rebuild_washington_d_c_desc:0 ""
+ USA_rebuild_washington_d_c_desc:0 "TODO"
  USA_welcome_the_investors:0 "投資家を歓迎"
- USA_welcome_the_investors_desc:0 ""
+ USA_welcome_the_investors_desc:0 "TODO"
  USA_establish_the_reconstruction_agency:0 "復興庁を設立"
- USA_establish_the_reconstruction_agency_desc:0 ""
+ USA_establish_the_reconstruction_agency_desc:0 "TODO"
  USA_factory_of_the_world:0 "世界の工場"
- USA_factory_of_the_world_desc:0 ""
+ USA_factory_of_the_world_desc:0 "TODO"
  USA_expand_the_scholarship_system:0 "奨学金制度の拡充"
- USA_expand_the_scholarship_system_desc:0 ""
+ USA_expand_the_scholarship_system_desc:0 "TODO"
  USA_JAP_non_intervention_treaty:0 "日米不干渉条約"
- USA_JAP_non_intervention_treaty_desc:0 ""
+ USA_JAP_non_intervention_treaty_desc:0 "TODO"
  USA_protect_IRE:0 "アイルランドを保護"
- USA_protect_IRE_desc:0 ""
+ USA_protect_IRE_desc:0 "TODO"
  USA_the_continental_congress:0 "大陸会議"
- USA_the_continental_congress_desc:0 ""
+ USA_the_continental_congress_desc:0 "TODO"
  USA_spread_the_ideal_of_independence:0 "独立心を煽る"
- USA_spread_the_ideal_of_independence_desc:0 ""
+ USA_spread_the_ideal_of_independence_desc:0 "TODO"
  USA_the_paris_conference:0 "パリ会談"
- USA_the_paris_conference_desc:0 ""
+ USA_the_paris_conference_desc:0 "TODO"
  USA_we_are_invincible:0 "我は不滅なり"
- USA_we_are_invincible_desc:0 ""
+ USA_we_are_invincible_desc:0 "TODO"
  USA_crush_JAP:0 "日本を粉砕"
- USA_crush_JAP_desc:0 ""
+ USA_crush_JAP_desc:0 "TODO"
  USA_operation_downfall:0 "ダウンフォール作戦"
- USA_operation_downfall_desc:0 ""
+ USA_operation_downfall_desc:0 "TODO"
  USA_ban_totalitarianism:0 "全体主義を禁止"
- USA_ban_totalitarianism_desc:0 ""
+ USA_ban_totalitarianism_desc:0 "TODO"
  USA_diplomatic_solution:0 "外交的解決"
- USA_diplomatic_solution_desc:0 ""
+ USA_diplomatic_solution_desc:0 "TODO"
  USA_military_invasion:0 "軍事侵攻"
- USA_military_invasion_desc:0 ""
+ USA_military_invasion_desc:0 "TODO"
  USA_overthrow_our_former_master:0 "旧宗主国の打倒"
- USA_overthrow_our_former_master_desc:0 ""
+ USA_overthrow_our_former_master_desc:0 "TODO"
  USA_historical_compromise:0 "歴史的和解"
- USA_historical_compromise_desc:0 ""
+ USA_historical_compromise_desc:0 "TODO"
 
 #idea
  USA_sour_loser:0 "苦い敗北"
- USA_sour_loser_desc:0 ""
+ USA_sour_loser_desc:0 "TODO"
  USA_failed_new_deal:0 "ニューディールの失敗"
- USA_failed_new_deal_desc:0 ""
+ USA_failed_new_deal_desc:0 "TODO"
  USA_war_debt:0 "戦争負債償還"
- USA_war_debt_desc:0 ""
+ USA_war_debt_desc:0 "TODO"
  USA_war_indemnity:0 "戦争賠償金"
- USA_war_indemnity_desc:0 ""
+ USA_war_indemnity_desc:0 "TODO"
  USA_spread_dissatisfaction:0 "広がる不満"
- USA_spread_dissatisfaction_desc:0 ""
+ USA_spread_dissatisfaction_desc:0 "TODO"
  
 #event
  USA_ACW.0.t:0 "崩れるアメリカ"
