--- a/localisation/japanese/generic/geacps_generic_focus_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_generic_focus_l_japanese.yml
@@ -1,53 +1,104 @@
 ﻿l_japanese:
 #国家方針
  strengthening_domestic_capital:0 "自国資本の強化"
+ strengthening_domestic_capital_desc:0 "TODO"
  strengthening_military_power:0 "軍事力の強化"
+ strengthening_military_power_desc:0 "TODO"
  initial_industrialization:0 "初期工業化"
+ initial_industrialization_desc:0 "TODO"
  focus_on_the_military_1:0 "軍事への注力 I"
+ focus_on_the_military_1_desc:0 "TODO"
  focus_on_the_military_2:0 "軍事への注力 II"
+ focus_on_the_military_2_desc:0 "TODO"
  focus_on_the_military_3:0 "軍事への注力 III"
+ focus_on_the_military_3_desc:0 "TODO"
  focus_on_the_private_sector_1:0 "民間への注力 I"
+ focus_on_the_private_sector_1_desc:0 "TODO"
  focus_on_the_private_sector_2:0 "民間への注力 II"
+ focus_on_the_private_sector_2_desc:0 "TODO"
  focus_on_the_private_sector_3:0 "民間への注力 III"
+ focus_on_the_private_sector_3_desc:0 "TODO"
  focus_on_national_defense:0 "国土防衛への注力"
+ focus_on_national_defense_desc:0 "TODO"
  mainland_fortification:0 "本土の要塞化"
+ mainland_fortification_desc:0 "TODO"
  development_of_nuclear_weapons:0 "核兵器の開発"
+ development_of_nuclear_weapons_desc:0 "TODO"
  investing_in_technology:0 "技術への投資"
+ investing_in_technology_desc:0 "TODO"
  focus_on_basic_electronics:0 "基礎電子工学への注力"
+ focus_on_basic_electronics_desc:0 "TODO"
  increased_construction_speed:0 "建設速度の向上"
+ increased_construction_speed_desc:0 "TODO"
  focus_on_industry:0 "産業への注力"
+ focus_on_industry_desc:0 "TODO"
  increased_production_capacity:0 "生産能力の向上"
+ increased_production_capacity_desc:0 "TODO"
  investing_in_infrastructure_1:0 "インフラへの投資 I"
+ investing_in_infrastructure_1_desc:0 "TODO"
  investing_in_infrastructure_2:0 "インフラへの投資 II"
+ investing_in_infrastructure_2_desc:0 "TODO"
  investing_in_infrastructure_3:0 "インフラへの投資 III"
+ investing_in_infrastructure_3_desc:0 "TODO"
  focus_on_army:0 "陸軍への注力"
+ focus_on_army_desc:0 "TODO"
  focus_on_light_tanks:0 "軽戦車への注力"
+ focus_on_light_tanks_desc:0 "TODO"
  focus_on_medium_tanks:0 "中戦車への注力"
+ focus_on_medium_tanks_desc:0 "TODO"
  focus_on_heavy_tanks:0 "重戦車への注力"
+ focus_on_heavy_tanks_desc:0 "TODO"
  focus_on_artillery_equipment_1:0 "砲兵装備への注力 I"
+ focus_on_artillery_equipment_1_desc:0 "TODO"
  focus_on_artillery_equipment_2:0 "砲兵装備への注力 II"
+ focus_on_artillery_equipment_2_desc:0 "TODO"
  focus_on_artillery_equipment_3:0 "砲兵装備への注力 III"
+ focus_on_artillery_equipment_3_desc:0 "TODO"
  focus_on_infantry_equipment_1:0 "歩兵装備への注力 I"
+ focus_on_infantry_equipment_1_desc:0 "TODO"
  focus_on_infantry_equipment_2:0 "歩兵装備への注力 II"
+ focus_on_infantry_equipment_2_desc:0 "TODO"
  focus_on_infantry_equipment_3:0 "歩兵装備への注力 III"
+ focus_on_infantry_equipment_3_desc:0 "TODO"
  focus_on_special_forces:0 "特殊部隊への注力"
+ focus_on_special_forces_desc:0 "TODO"
  focus_on_doctrine:0 "ドクトリンへの注力"
+ focus_on_doctrine_desc:0 "TODO"
  focus_on_navy:0 "海軍への注力"
+ focus_on_navy_desc:0 "TODO"
  flexible_navy:0 "柔軟な海軍"
+ flexible_navy_desc:0 "TODO"
  focus_on_submarines:0 "潜水艦への注力"
+ focus_on_submarines_desc:0 "TODO"
  focus_on_destroyers:0 "駆逐艦への注力"
+ focus_on_destroyers_desc:0 "TODO"
  large_navy:0 "大規模海軍"
+ large_navy_desc:0 "TODO"
  focus_on_capital_ships:0 "主力艦への注力"
+ focus_on_capital_ships_desc:0 "TODO"
  focus_on_aircraft_carriers:0 "航空母艦への注力"
+ focus_on_aircraft_carriers_desc:0 "TODO"
  expansion_of_naval_base:0 "海軍基地の増設"
+ expansion_of_naval_base_desc:0 "TODO"
  focus_on_air_force:0 "空軍への注力"
+ focus_on_air_force_desc:0 "TODO"
  lend-lease_from_other_countries:0 "他国からのレンドリース"
+ lend-lease_from_other_countries_desc:0 "TODO"
  original_research:0 "独自の研究"
+ original_research_desc:0 "TODO"
  cooperation_with_the_army:0 "陸軍との連携"
+ cooperation_with_the_army_desc:0 "TODO"
  cooperation_with_the_navy:0 "海軍との連携"
+ cooperation_with_the_navy_desc:0 "TODO"
  cooperation_with_the_civil:0 "民間との連携"
+ cooperation_with_the_civil_desc:0 "TODO"
  strategic_aircraft_specialization:0 "戦略航空機の特化"
+ strategic_aircraft_specialization_desc:0 "TODO"
  tactical_aircraft_specialization:0 "戦術航空機の特化"
+ tactical_aircraft_specialization_desc:0 "TODO"
  expansion_of_air_force_base:0 "空軍基地の増設"
+ expansion_of_air_force_base_desc:0 "TODO"
  rocket_development:0 "ロケットの開発"
+ rocket_development_desc:0 "TODO"
  jet_aircraft_development:0 "ジェット機の開発"
+ jet_aircraft_development_desc:0 "TODO"
