ギリシャ内戦の実装と内戦後政治ツリーの追加

--- a/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
@@ -1,13 +1,14 @@
 ﻿l_japanese:
 #国家方針
- GRE_civil_war:0 "内戦"
- GRE_civil_war_desc:0 "TODO"
- GRE_provisional_democratic_government_of_greece:0 "ギリシャ臨時民主政府"
+ GRE_focus_tree:0 "[ROOT.GetName] 国家方針ツリー"
+ GRE:0 "内戦"
+ GRE_desc:0 "TODO"
+ GRE_provisional_democratic_government_of_greece:0 "臨時民主政府"
  GRE_provisional_democratic_government_of_greece_desc:0 "TODO"
- GRE_kingdom_of_greece:0 "ギリシャ王国"
+ GRE_kingdom_of_greece:0 "王国政府"
  GRE_kingdom_of_greece_desc:0 "TODO"
  
- GRE_kingdom_civil_war_focus_tree:0 "ギリシャ内戦 王国"
+ GRE_kingdom_civil_war_focus_tree:0 "ギリシャ内戦 王国政府 国家方針ツリー"
  GRE_papandreous_resignation:0 "パパンドレウの辞職"
  GRE_papandreous_resignation_desc:0 "TODO"
  GRE_yugoslav_border_blockade:0 "ユーゴスラビア国境の封鎖"
@@ -25,7 +26,7 @@
  GRE_calls_for_the_resigning_of_the_varkiza_accords:0 "ヴァルキザ協定の再締結を求める"
  GRE_calls_for_the_resigning_of_the_varkiza_accords_desc:0 "TODO"
  
- GRE_kingdom_civil_war_focus_tree:0 "ギリシャ内戦 臨時民主政府"
+ GRE_provisional_democratic_government_civil_war_focus_tree:0 "ギリシャ内戦 臨時民主政府 国家方針ツリー"
  GRE_led_by_the_communist_party:0 "共産党の主導"
  GRE_led_by_the_communist_party_desc:0 "TODO"
  GRE_velouchiotis_faction:0 "ヴェロウキオティス派"
@@ -58,6 +59,69 @@
  GRE_militia_training_desc:0 "TODO"
  GRE_get_them_out:0 "奴らを追い出せ！"
  GRE_get_them_out_desc:0 "TODO"
+ 
+ GRE_kingdom_focus_tree:0 "ギリシャ王国 国家方針ツリー"
+ GRE_declaration_of_rebuilding_the_nation:0 "国家の再建を宣言"
+ GRE_declaration_of_rebuilding_the_nation_desc:0 "TODO"
+ GRE_permitted_to_station_british_troops:0 "イギリス軍駐屯を許可"
+ GRE_permitted_to_station_british_troops_desc:0 "TODO"
+ GRE_agreement_with_two_sicilies:0 "両シチリアとの協定"
+ GRE_agreement_with_two_sicilies_desc:0 "TODO"
+ GRE_taranto_treaty:0 "タラント条約"
+ GRE_taranto_treaty_desc:0 "TODO"
+ GRE_mediterranean_union:0 "地中海同盟"
+ GRE_mediterranean_union_desc:0 "TODO"
+ GRE_agreement_on_the_return_of_crete:0 "クレタ返還協定"
+ GRE_agreement_on_the_return_of_crete_desc:0 "TODO"
+ GRE_to_westminster_treaty_organization:0 "ウェストミンスター条約機構へ"
+ GRE_to_westminster_treaty_organization_desc:0 "TODO"
+ GRE_joint_research:0 "共同研究"
+ GRE_joint_research_desc:0 "TODO"
+ GRE_solving_the_ipilos_problem:0 "イピロス問題の解決"
+ GRE_solving_the_ipilos_problem_desc:0 "TODO"
+ GRE_joint_exercise:0 "共同演習"
+ GRE_joint_exercise_desc:0 "TODO"
+ GRE_proposed_dialogue_to_turkey:0 "トルコへの対話を提案"
+ GRE_proposed_dialogue_to_turkey_desc:0 "TODO"
+ GRE_cyprus_governance:0 "キプロスの統治？"
+ GRE_cyprus_governance_desc:0 "TODO"
+ 
+ GRE_republic_focus_tree:0 "ギリシャ共和国 国家方針ツリー"
+ GRE_republican_declaration:0 "共和国宣言"
+ GRE_republican_declaration_desc:0 "TODO"
+ GRE_athens_trials:0 "アテネ裁判"
+ GRE_athens_trials_desc:0 "TODO"
+ GRE_labors_claim_to_farmerism:0 "労農主義の主張"
+ GRE_labors_claim_to_farmerism_desc:0 "TODO"
+ GRE_labor_militia:0 "労働者民兵"
+ GRE_labor_militia_desc:0 "TODO"
+ GRE_systematization_of_socialist_theory:0 "社会主義理論の体系化"
+ GRE_systematization_of_socialist_theory_desc:0 "TODO"
+ GRE_focus_on_maintaining_revolution:0 "革命維持への注力"
+ GRE_focus_on_maintaining_revolution_desc:0 "TODO"
+ GRE_exporting_revolution:0 "革命を輸出"
+ GRE_exporting_revolution_desc:0 "TODO"
+ GRE_to_eastern_europe:0 "東欧へ"
+ GRE_to_eastern_europe_desc:0 "TODO"
+ GRE_panmediterranean_colonial_committee:0 "汎地中海殖民地委員会"
+ GRE_panmediterranean_colonial_committee_desc:0 "TODO"
+ GRE_expansion_into_asia:0 "アジアへの進出"
+ GRE_expansion_into_asia_desc:0 "TODO"
+ GRE_with_moscow:0 "モスクワと共に"
+ GRE_with_moscow_desc:0 "TODO"
+ GRE_cominform_research_institute:0 "コミンフォルム研究所"
+ GRE_cominform_research_institute_desc:0 "TODO"
+ GRE_as_the_forefront_of_the_iron_curtain:0 "鉄のカーテンの最前線として"
+ GRE_as_the_forefront_of_the_iron_curtain_desc:0 "TODO"
+ GRE_originalism:0 "独自主義"
+ GRE_originalism_desc:0 "TODO"
+ GRE_disturbances_in_belgrade:0 "ベオグラードでの騒動"
+ GRE_disturbances_in_belgrade_desc:0 "TODO"
+ GRE_comrades_in_albania:0 "アルバニアの同志"
+ GRE_comrades_in_albania_desc:0 "TODO"
+ GRE_hold_the_bosphorus:0 "ボスポラスを抑えろ！"
+ GRE_hold_the_bosphorus_desc:0 "TODO"
+
 
 #国民精神
 
@@ -65,3 +129,13 @@
  
 
 #イベント
+ GRE.0.t:0 "ギリシャ人民解放軍が蜂起"
+ GRE.0.d:0 ""
+ GRE.0.0:0 "国王陛下と共に！"
+ GRE.0.1:0 "君主主義者に死を！"
+ GRE_news.0.t:0 "ギリシャ内戦勃発"
+ GRE_news.0.d:0 ""
+ GRE_news.0.0:0 ""
+ GRE_news.1.t:0 "ギリシャ内戦終結"
+ GRE_news.1.d:0 ""
+ GRE_news.1.0:0 ""
