ギリシャ内戦後NF追加

--- a/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
@@ -1,8 +1,8 @@
 ﻿l_japanese:
 #国家方針
  GRE_focus_tree:0 "[ROOT.GetName] 国家方針ツリー"
- GRE:0 "内戦"
- GRE_desc:0 "TODO"
+ GRE_civil_war:0 "内戦"
+ GRE_civil_war_desc:0 "TODO"
  GRE_provisional_democratic_government_of_greece:0 "臨時民主政府"
  GRE_provisional_democratic_government_of_greece_desc:0 "TODO"
  GRE_kingdom_of_greece:0 "王国政府"
@@ -121,8 +121,96 @@
  GRE_comrades_in_albania_desc:0 "TODO"
  GRE_hold_the_bosphorus:0 "ボスポラスを抑えろ！"
  GRE_hold_the_bosphorus_desc:0 "TODO"
-
-
+ 
+ GRE_end_of_civil_war:0 "内戦の終結"
+ GRE_end_of_civil_war_desc:0 "TODO"
+ GRE_air_force:0 "[ROOT.GetGREAirForce]"
+ GRE_air_force_desc:0 "TODO"
+ GRE_integration_into_foreign_aircraft:0 "[ROOT.GetGREIntegrationIntoForeignAircraft]"
+ GRE_integration_into_foreign_aircraft_desc:0 "TODO"
+ GRE_air_force_reform:0 "空軍改革"
+ GRE_air_force_reform_desc:0 "TODO"
+ GRE_focus_on_doctrine:0 "ドクトリンへの注力"
+ GRE_focus_on_doctrine_desc:0 "TODO"
+ GRE_focus_on_aircraft_production:0 "機体生産への注力"
+ GRE_focus_on_aircraft_production_desc:0 "TODO"
+ GRE_air_base_expansion:0 "航空基地の拡張"
+ GRE_air_base_expansion_desc:0 "TODO"
+ GRE_labour_military_service:0 "労働者軍役"
+ GRE_labour_military_service_desc:0 "TODO"
+ GRE_army_realignment:0 "陸軍再編"
+ GRE_army_realignment_desc:0 "TODO"
+ GRE_defense_of_the_islands:0 "諸島の防衛"
+ GRE_defense_of_the_islands_desc:0 "TODO"
+ GRE_promotion_of_modernization:0 "近代化の推進"
+ GRE_promotion_of_modernization_desc:0 "TODO"
+ GRE_distinctive_forces:0 "[ROOT.GetGREDistinctiveForces]"
+ GRE_distinctive_forces_desc:0 "TODO"
+ GRE_spartan_spirit:0 "スパルタ人の精神"
+ GRE_spartan_spirit_desc:0 "TODO"
+ GRE_special_forces_section:0 "特殊兵科"
+ GRE_special_forces_section_desc:0 "TODO"
+ GRE_industrial_revival:0 "工業の復興"
+ GRE_industrial_revival_desc:0 "TODO"
+ GRE_inflow_of_foreign_capital:0 "外国資本の流入"
+ GRE_inflow_of_foreign_capital_desc:0 "TODO"
+ GRE_supported_by_the_united_kingdom:0 "イギリスの支援を受ける"
+ GRE_supported_by_the_united_kingdom_desc:0 "TODO"
+ GRE_protection_of_homegrown_companies:0 "自国企業の保護"
+ GRE_protection_of_homegrown_companies_desc:0 "TODO"
+ GRE_nationalization_of_mines:0 "鉱山の国有化"
+ GRE_nationalization_of_mines_desc:0 "TODO"
+ GRE_aggressive_hiring:0 "積極的雇用"
+ GRE_aggressive_hiring_desc:0 "TODO"
+ GRE_imitation_of_the_fiveyear_plan:0 "五ヵ年計画の模倣"
+ GRE_imitation_of_the_fiveyear_plan_desc:0 "TODO"
+ GRE_trade_union_liberalization:0 "労働組合の自由化"
+ GRE_trade_union_liberalization_desc:0 "TODO"
+ GRE_corporate_democratization:0 "企業の民主化"
+ GRE_corporate_democratization_desc:0 "TODO"
+ GRE_focus_on_selfsufficiency:0 "自活への注力"
+ GRE_focus_on_selfsufficiency_desc:0 "TODO"
+ GRE_breaking_away_from_a_system_of_dependence:0 "依存体制からの脱却"
+ GRE_breaking_away_from_a_system_of_dependence_desc:0 "TODO"
+ GRE_improved_working_environment:0 "労働環境の改善"
+ GRE_improved_working_environment_desc:0 "TODO"
+ GRE_settlement_with_labor_unions:0 "労働組合との和解"
+ GRE_settlement_with_labor_unions_desc:0 "TODO"
+ GRE_naval_reorganization:0 "海軍再編"
+ GRE_naval_reorganization_desc:0 "TODO"
+ GRE_near_shore_defense_doctrine:0 "近海防衛ドクトリン"
+ GRE_near_shore_defense_doctrine_desc:0 "TODO"
+ GRE_themistokles_lesson:0 "テミストクレスの教訓"
+ GRE_themistokles_lesson_desc:0 "TODO"
+ GRE_focus_on_smaller_vessels:0 "小型艦への注力"
+ GRE_focus_on_smaller_vessels_desc:0 "TODO"
+ GRE_seek_the_flagship:0 "旗艦を求めよ！"
+ GRE_seek_the_flagship_desc:0 "TODO"
+ GRE_battleships_are_champions:0 "戦艦こそ覇者"
+ GRE_battleships_are_champions_desc:0 "TODO"
+ GRE_shipbuilding_export:0 "造船業の輸出"
+ GRE_shipbuilding_export_desc:0 "TODO"
+ GRE_focus_on_transportation:0 "輸送への注力"
+ GRE_focus_on_transportation_desc:0 "TODO"
+ GRE_aegean_sea_exercise:0 "エーゲ海演習"
+ GRE_aegean_sea_exercise_desc:0 "TODO"
+ GRE_the_challenge_of_an_aircraft_carrier:0 "空母への挑戦"
+ GRE_the_challenge_of_an_aircraft_carrier_desc:0 "TODO"
+ GRE_focus_on_exports:0 "輸出への注力"
+ GRE_focus_on_exports_desc:0 "TODO"
+ 
+ GRE_royal_air_force_name:0 "王立空軍"
+ GRE_red_air_force_name:0 "赤色空軍"
+ GRE_air_force_name:0 "ギリシャ空軍"
+ 
+ GRE_integration_into_GBR_aircraft_name:0 "イギリス製航空機への統合"
+ GRE_integration_into_SOV_aircraft_name:0 "ソビエト製航空機への統合"
+ GRE_integration_into_foreign_aircraft_name:0 "外国製航空機への統合"
+ 
+ GRE_loyalist_forces_name:0 "忠誠心のある軍"
+ GRE_workers_forces_name:0 "労働者の軍"
+ GRE_distinctive_forces_name:0 "特色のある軍"
+ 
 #国民精神
 
 #ディシジョン
