--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -25,6 +25,8 @@
  PARTY_national_democratic_front_long:0 "国民民主戦線"
  PARTY_national_democratic_union:0 "国民民主連合"
  PARTY_national_democratic_union_long:0 "国民民主連合"
+ PARTY_national_liberation_front:0 "民族解放戦線"
+ PARTY_national_liberation_front_long:0 "民族解放戦線"
  PARTY_peoples_party:0 "人民党"
  PARTY_peoples_party_long:0 "人民党"
  PARTY_provisional_government:0 "臨時政府"
@@ -153,6 +155,12 @@
  PARTY_social_democratic_party_of_germany_long:0 "ドイツ社会民主党"
  PARTY_socialist_unity_party_of_germany:0 "SED"
  PARTY_socialist_unity_party_of_germany_long:0 "ドイツ社会主義統一党"
+ 
+#GRE
+ PARTY_communist_party_of_greece:0 "KKE"
+ PARTY_communist_party_of_greece_long:0 "ギリシャ共産党"
+ PARTY_provisional_democratic_government:0 "臨時民主政府"
+ PARTY_provisional_democratic_government_long:0 "臨時民主政府"
  
 ##アフリカ
 #EGY-エジプト
