--- a/localisation/japanese/map/geacps_countries_long_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_long_l_japanese.yml
@@ -584,6 +584,8 @@
  GRE_democratic_republic_DEF:0 "ギリシャ民主共和国"
  GRE_kingdom:0 "ギリシャ王国"
  GRE_kingdom_DEF:0 "ギリシャ王国"
+ GRE_kingdom_government:0 "ギリシャ王国政府"
+ GRE_kingdom_government_DEF:0 "ギリシャ王国政府"
  GRE_provisional_democratic_government:0 "ギリシャ臨時民主政府"
  GRE_provisional_democratic_government_DEF:0 "ギリシャ臨時民主政府"
  GRE_republic:0 "ギリシャ共和国"
@@ -1878,6 +1880,9 @@
  ADR_republic:0 "アンドラ共和国"
  ADR_republic_DEF:0 "アンドラ共和国"
  
+ AEG_federation:0 "エーゲ連邦"
+ AEG_federation_DEF:0 "エーゲ連邦"
+ 
  ALA_republic:0 "オーランド共和国"
  ALA_republic_DEF:0 "オーランド共和国"
  
@@ -1929,6 +1934,9 @@
  COW_duchy_DEF:0 "コーンウォール公国"
  COW_republic:0 "コーンウォール共和国"
  COW_republic_DEF:0 "コーンウォール共和国"
+ 
+ CRE_state:0 "クレタ国"
+ CRE_state_DEF:0 "クレタ国"
  
  CRL_duchy:0 "クールラント公国"
  CRL_duchy_DEF:0 "クールラント公国"
@@ -1994,6 +2002,9 @@
  
  ING_republic:0 "イングーシ共和国"
  ING_republic_DEF:0 "イングーシ共和国"
+ 
+ ION_republic:0 "イオニア共和国"
+ ION_republic_DEF:0 "イオニア共和国"
  
  IST_margraviate:0 "イストリア辺境伯領"
  IST_margraviate_DEF:0 "イストリア辺境伯領"
