--- a/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_cosmetic_l_japanese.yml
@@ -505,6 +505,10 @@
  TWOSICILIES_kingdom_DEF:0 "両シチリア王国"
  TWOSICILIES_kingdom_ADJ:0 "両シチリア"
  
+ VAT_city_and_RME_protected_territory:0 "バチカン市及びローマ保護領"
+ VAT_city_and_RME_protected_territory_DEF:0 "バチカン市及びローマ保護領"
+ VAT_city_and_RME_protected_territory_ADJ:0 "教皇領"
+ 
 #アフリカ
  AFRICA_union:0 "アフリカ連合"
  AFRICA_union_DEF:0 "アフリカ連合"
