トランスバイカルの初期国民精神の追加

--- a/localisation/japanese/countries_asia/geacps_FEA_l_japanese.yml
+++ b/localisation/japanese/countries_asia/geacps_FEA_l_japanese.yml
@@ -213,6 +213,9 @@
  FEA_conquer_the_east_desc:0 "TODO"
  
 #国民精神
+ FEA_limited_recognition:0 "限定された認知"
+ FEA_reactionary_politics:0 "反動的政治"
+ FEA_export_dependent_economy:0 "輸出前提の経済"
  FEA_president_system:0 "総統制"
  FEA_work_poor:0 "仕事を得た貧困層"
  FEA_oligarch_i:0 "オリガルヒ"
