ギリシャ内戦関連

--- a/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_GRE_l_japanese.yml
@@ -1,7 +1,7 @@
 ﻿l_japanese:
 #国家方針
  GRE_focus_tree:0 "[ROOT.GetName] 国家方針ツリー"
- GRE_civil_war:0 "内戦"
+ GRE_civil_war_start:0 "内戦勃発"
  GRE_civil_war_desc:0 "TODO"
  GRE_provisional_democratic_government_of_greece:0 "臨時民主政府"
  GRE_provisional_democratic_government_of_greece_desc:0 "TODO"
@@ -214,13 +214,105 @@
 #国民精神
 
 #ディシジョン
- 
+ form_GRE_GBR:0 "ギリシャ離島部の運命"
 
 #イベント
- GRE.0.t:0 "ギリシャ人民解放軍が蜂起"
- GRE.0.d:0 ""
- GRE.0.0:0 "国王陛下と共に！"
- GRE.0.1:0 "君主主義者に死を！"
+ GRE_civil_war.0.t:0 "ギリシャ人民解放軍が蜂起"
+ GRE_civil_war.0.d:0 ""
+ GRE_civil_war.0.0:0 "国王陛下と共に！"
+ GRE_civil_war.0.1:0 "君主主義者に死を！"
+ GRE_civil_war.1.t:0 "離島部防衛"
+ GRE_civil_war.1.d:0 "人民解放軍の蜂起に対して我々は断固として鎮圧しなければならない。救いにも敵には海軍戦力は確認されて居ない。早急に対処するためにも離島防衛戦力を主力戦線に回すべきだろうか？"
+ GRE_civil_war.1.0:0 "離島部の防衛戦力はそのままだ"
+ GRE_civil_war.1.1:0 "離島部の全防衛戦力を使おう"
+ GRE_civil_war.1.2:0 "イギリスに離島部の統治の委任を要請しよう"
+ GRE_civil_war.2.t:0 "ギリシャが離島部から撤退"
+ GRE_civil_war.2.d:0 "ギリシャ王国政府が内戦の影響によって離島部から防衛戦力を撤退したことを確認した。この隙を衝くべきだろうか？"
+ GRE_civil_war.2.0:0 "クレタ島へ進駐せよ"
+ GRE_civil_war.2.1:0 "エーゲ海諸島へ進駐せよ"
+ GRE_civil_war.2.2:0 "コルフ島へ進駐せよ"
+ GRE_civil_war.2.3:0 "あまりにも危険だ"
+ GRE_civil_war.3.t:0 "ギリシャからの要請"
+ GRE_civil_war.3.d:0 "ギリシャ王国政府が内戦の支援と離島部の委任統治の要請してきた。"
+ GRE_civil_war.3.0:0 "要請を受諾"
+ GRE_civil_war.3.1:0 "我々に余裕はない"
+ GRE_civil_war.4.t:0 "イギリスが受諾"
+ GRE_civil_war.4.d:0 ""
+ GRE_civil_war.4.0:0 "首の皮一枚繋がったな……"
+ GRE_civil_war.5.t:0 "イギリスが拒否"
+ GRE_civil_war.5.d:0 ""
+ GRE_civil_war.5.0:0 "仕方あるまい……"
+ GRE_civil_war.6.t:0 "[FROM.GetAdjective]が進駐"
+ GRE_civil_war.6.d:0 "我々が離島部から最低限の防衛戦力を残して撤退したことを見計らって[FROM.GetAdjective]が離島部に進駐してきた。"
+ GRE_civil_war.6.0:0 "くそっ"
+ GRE_civil_war.7.t:0 "クレタ島の運命"
+ GRE_civil_war.7.d:0 "我々はクレタ島に進駐した。この地をどうすべきだろうか？"
+ GRE_civil_war.7.0:0 "共和政国家を樹立して保護せよ"
+ GRE_civil_war.7.1:0 "保護領とせよ"
+ GRE_civil_war.8.t:0 "トルコがエーゲ海諸島に進駐"
+ GRE_civil_war.8.d:0 "ギリシャ内戦に乗じてトルコがエーゲ海諸島に進駐した。我々は安全保障の観点から介入すべきだろうか？"
+ GRE_civil_war.8.0:0 "介入せよ"
+ GRE_civil_war.8.1:0 "我々に余裕はない"
+ GRE_civil_war.9.t:0 "イギリスが介入"
+ GRE_civil_war.9.d:0 "我々はエーゲ海諸島に進駐したがイギリスがこれに対して断固たる措置を取ると発表した。"
+ GRE_civil_war.9.0:0 "どうせ口だけだろう"
+ GRE_civil_war.9.1:0 "妥協案として共同統治を提案してみよう"
+ GRE_civil_war.9.2:0 "引き下がるしかない"
+ GRE_civil_war.10.t:0 "トルコが撤退を拒否"
+ GRE_civil_war.10.d:0 "トルコは我々の脅しに屈しなかった。"
+ GRE_civil_war.10.0:0 "宣戦布告"
+ GRE_civil_war.10.1:0 "屈辱だが引き下がろう"
+ GRE_civil_war.11.t:0 "トルコが共同統治を提案"
+ GRE_civil_war.11.d:0 "トルコは我々に対してエーゲ海諸島の共同統治を提案してきた。"
+ GRE_civil_war.11.0:0 "提案を受諾しよう"
+ GRE_civil_war.11.1:0 "我々は全面撤退を要求する"
+ GRE_civil_war.12.t:0 "イギリスが受諾"
+ GRE_civil_war.12.d:0 "我々の妥協案に対してイギリスは受諾した。"
+ GRE_civil_war.12.0:0 "大変結構！"
+ GRE_civil_war.13.t:0 "イギリスが拒否"
+ GRE_civil_war.13.d:0 "我々の妥協案に対してイギリスは全面撤退の要求は撤回しないとして拒否した。"
+ GRE_civil_war.13.0:0 "撤退しない旨と伝えろ"
+ GRE_civil_war.13.1:0 "撤退しよう……"
+ GRE_civil_war.14.t:0 "トルコがエーゲ海諸島から撤退"
+ GRE_civil_war.14.d:0 "トルコがエーゲ海諸島から撤退したことを確認した。再びトルコが進駐しないように我々が守るべきではないだろうか？"
+ GRE_civil_war.14.0:0 "我々が保護しよう"
+ GRE_civil_war.14.1:0 "我々に余裕はない"
+ GRE_civil_war.15.t:0 "エーゲ海諸島の運命"
+ GRE_civil_war.15.d:0 "我々はエーゲ海諸島に進駐した。この地をどうすべきだろうか？"
+ GRE_civil_war.15.0:0 "共和政国家を樹立して保護せよ"
+ GRE_civil_war.15.1:0 "保護領とせよ"
+ GRE_civil_war.15.2:0 "我が領土として編入せよ"
+ GRE_civil_war.16.t:0 "トルコがエーゲ海諸島編入を宣言"
+ GRE_civil_war.16.d:0 "トルコがエーゲ海諸島の編入を宣言した。これに対して我々はやはり介入すべきだろうか？"
+ GRE_civil_war.16.0:0 "やはり介入すべきだろう"
+ GRE_civil_war.16.1:0 "我々に余裕はない"
+ GRE_civil_war.17.t:0 "アルバニアがコルフ島に進駐"
+ GRE_civil_war.17.d:0 "ギリシャ内戦に乗じてアルバニアがコルフ島に進駐した。我々は安全保障の観点から介入すべきだろうか？"
+ GRE_civil_war.17.0:0 "介入せよ"
+ GRE_civil_war.17.1:0 "我々に余裕はない"
+ GRE_civil_war.18.t:0 "イギリスが介入"
+ GRE_civil_war.18.d:0 "我々はコルフ島に進駐したがイギリスがこれに対して断固たる措置を取ると発表した。"
+ GRE_civil_war.18.0:0 "どうせ口だけだろう"
+ GRE_civil_war.18.1:0 "引き下がるしかない"
+ GRE_civil_war.19.t:0 "アルバニアが撤退を拒否"
+ GRE_civil_war.19.d:0 "アルバニアは我々の脅しに屈しなかった。"
+ GRE_civil_war.19.0:0 "宣戦布告"
+ GRE_civil_war.19.1:0 "屈辱だが引き下がろう"
+ GRE_civil_war.20.t:0 "アルバニアがコルフ島から撤退"
+ GRE_civil_war.20.d:0 "アルバニアがコルフ島から撤退したことを確認した。再びアルバニアが進駐しないように我々がコルフ島を含むイオニア諸島全域を守るべきではないだろうか？"
+ GRE_civil_war.20.0:0 "我々が保護しよう"
+ GRE_civil_war.20.1:0 "我々に余裕はない"
+ GRE_civil_war.21.t:0 "イオニア諸島の運命"
+ GRE_civil_war.21.d:0 "我々はイオニア諸島に進駐した。この地をどうすべきだろうか？"
+ GRE_civil_war.21.0:0 "共和政国家を樹立して保護せよ"
+ GRE_civil_war.21.1:0 "保護領とせよ"
+ GRE_civil_war.21.2:0 "イオニア合衆国を復古"
+ GRE_civil_war.22.t:0 "ギリシャ離島部の再編"
+ GRE_civil_war.22.d:0 "我々はギリシャの離島部をそれぞれ保護領とした。これらを再編すべきだろうか？"
+ GRE_civil_war.22.0:0 "我らが陛下こそギリシャ王に相応しい"
+ GRE_civil_war.22.1:0 "ギリシャ保護領に再編せよ"
+ GRE_civil_war.22.2:0 "必要ないだろう"
+
  GRE_news.0.t:0 "ギリシャ内戦勃発"
  GRE_news.0.d:0 ""
  GRE_news.0.0:0 ""
