--- a/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
+++ b/localisation/japanese/map/geacps_countries_colony_l_japanese.yml
@@ -619,6 +619,13 @@
  EST_radical_socialism_soviet_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
  EST_soviet_soviet_autonomous_republic_ADJ:0 "$NONIDEOLOGYADJ$・$OVERLORDADJ$"
  
+ GRE_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ GRE_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ GRE_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ GRE_junior_partner_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$王国"
+ GRE_junior_partner_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$王国"
+ GRE_junior_partner_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ 
  KAR_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  KAR_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$共和国"
  KAR_total_socialism_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
@@ -2048,6 +2055,12 @@
  WTR_soviet_soviet_autonomous_republic_ADJ:0 "トルキスタン・$OVERLORDADJ$"
  
 #ヨーロッパ
+ AEG_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$海諸島"
+ AEG_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$海諸島"
+ AEG_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$海諸島"
+ AEG_condominium:0 "共同統治領$NONIDEOLOGY$"
+ AEG_condominium_DEF:0 "共同統治領$NONIDEOLOGY$"
+ 
  ALA_dominion:0 "オーランド諸島自治領"
  ALA_dominion_DEF:0 "オーランド諸島自治領"
  ALA_colony:0 "$OVERLORDADJ$領オーランド諸島植民地"
@@ -2060,6 +2073,10 @@
  AOS_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  AOS_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
  AOS_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$"
+ 
+ CRE_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$島"
+ CRE_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$島"
+ CRE_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$島"
  
  FRO_dominion:0 "フェロー諸島自治領"
  FRO_dominion_DEF:0 "フェロー諸島自治領"
@@ -2087,6 +2104,10 @@
  GUE_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  GUE_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  GUE_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
+ ION_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$諸島"
+ ION_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$諸島"
+ ION_protected_territory_ADJ:0 "$OVERLORDADJ$領$OVERLORDADJ$諸島"
  
  JER_dominion:0 "$NONIDEOLOGY$自治領"
  JER_dominion_DEF:0 "$NONIDEOLOGY$自治領"
@@ -2930,6 +2951,16 @@
  TRANSJORDAN_hashemite_kingdom_mandated_territory_A_ADJ:0 "$OVERLORDADJ$委任統治領トランスヨルダン"
  
 #ヨーロッパ
+ AEGandION_ENG_protected_territory:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_ENG_protected_territory_DEF:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_ENG_protected_territory_ADJ:0 "$OVERLORDADJ$領エーゲ・イオニア"
+ AEGandION_GBRbyENG_protected_territory:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_GBRbyENG_protected_territory_DEF:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_GBRbyENG_protected_territory_ADJ:0 "$OVERLORDADJ$領エーゲ・イオニア"
+ AEGandION_GBRandIREbyENG_protected_territory:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_GBRandIREbyENG_protected_territory_DEF:0 "$OVERLORDADJ$保護領エーゲ海諸島・イオニア諸島"
+ AEGandION_GBRandIREbyENG_protected_territory_ADJ:0 "$OVERLORDADJ$領エーゲ・イオニア"
+ 
  GALandLOD_kingdom_AUS_empire:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
  GALandLOD_kingdom_AUS_empire_DEF:0 "ガリツィア及びロドメリア王国及びクラカウ大公国並びにアウシュヴィッツ及びザルト公国"
  GALandLOD_kingdom_AUS_empire_ADJ:0 "ガリツィア・ロドメリア"
