イベリア諸国の国民精神関連の実装

--- a/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_ideologies_l_japanese.yml
@@ -66,6 +66,8 @@
  authoritative_democracy_acceptance:0 "権威民主主義者との外交の容認"
  authoritative_democracy_ideology:0 "権威民主主義"
  authoritative_democracy_ideology_desc:0 ""
+ authoritarian_conservatism_ideology:0 "権威的保守主義"
+ authoritarian_conservatism_ideology_desc:0 ""
  
 #National Authoritarianism
  national_authoritarianism:0 "国家権威主義"
@@ -84,5 +86,7 @@
  national_populism_acceptance:0 "国家大衆主義者との外交の容認"
  national_populism_ideology:0 "国家大衆主義"
  national_populism_ideology_desc:0 ""
+ francoism_ideology:0 "フランコ主義"
+ francoism_ideology_desc:0 "フランコ主義とは、権威主義や反共産主義、スペイン民族主義、国家カトリック、君主主義、軍国主義、国民保守主義、反フリーメーソン、反カタロニア主義、汎ヒスパニア主義、反自由主義を包括したしそうである。"
  national_socialism_ideology:0 "国民社会主義"
  national_socialism_ideology_desc:0 "かつてドイツにこの主義を掲げた与党があった。しかし先の大戦を引き起こし世界から忌み嫌われることとなった。"
