--- a/localisation/japanese/generic/geacps_parties_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_parties_l_japanese.yml
@@ -27,6 +27,8 @@
  PARTY_national_democratic_union_long:0 "国民民主連合"
  PARTY_national_liberation_front:0 "民族解放戦線"
  PARTY_national_liberation_front_long:0 "民族解放戦線"
+ PARTY_national_union:0 "国家連合党"
+ PARTY_national_union_long:0 "国家連合党"
  PARTY_peoples_party:0 "人民党"
  PARTY_peoples_party_long:0 "人民党"
  PARTY_provisional_government:0 "臨時政府"
@@ -161,6 +163,10 @@
  PARTY_communist_party_of_greece_long:0 "ギリシャ共産党"
  PARTY_provisional_democratic_government:0 "臨時民主政府"
  PARTY_provisional_democratic_government_long:0 "臨時民主政府"
+ 
+#SPR-スペイン
+ PARTY_traditionalist_spanish_falange_and_the_juntas_of_national_syndicalist_offensive:0 "新ファランヘ党"
+ PARTY_traditionalist_spanish_falange_and_the_juntas_of_national_syndicalist_offensive_long:0 "伝統主義スペイン・ファランヘ党及び攻撃的国家サンディカリスト同盟"
  
 ##アフリカ
 #EGY-エジプト
