--- a/localisation/japanese/countries_europe/geacps_GER_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_GER_l_japanese.yml
@@ -4,7 +4,8 @@
 #国民精神
  GER_the_berlin_declaration:0 "ベルリン宣言"
  GER_potsdam_agreement:0 "ポツダム協定"
- GER_denazification:0 "非ナチ化"
+ GER_halfway_denazification:0 "中途半端な非ナチ化"
+ GER_halfway_denazification_desc:0 "足並みのそろわない戦勝国による裁判が行われなかった結果非ナチ化が中途半端な形となっている。"
  GER_the_east-west_german_wall:0 "”東西ドイツ”の壁"
  
 #ディシジョン
