--- a/localisation/japanese/countries_europe/geacps_RUS_l_japanese.yml
+++ b/localisation/japanese/countries_europe/geacps_RUS_l_japanese.yml
@@ -289,6 +289,8 @@
  RUS_federalism_in_turmoil:0 "連邦制の動揺"
  RUS_victory_in_the_great_patriotic_war:0 "大祖国戦争に勝利"
  RUS_defeat_in_the_far_east:0 "極東における敗北"
+ RUS_czars_family_in_exile:0 "亡命中の皇帝一家"
+ RUS_czars_family_in_exile_desc:0 "ロシア革命によってロシア帝国瓦解した。しかし皇帝一家は難を逃れ、未だに生きながらえている。"
 
 #ディシジョン
  
