--- a/localisation/japanese/generic/geacps_characters_l_japanese.yml
+++ b/localisation/japanese/generic/geacps_characters_l_japanese.yml
@@ -244,9 +244,12 @@
  CHARACTER_nichipar_yakovlevich_natalevich_desc:0 "ベラルーシ・ソビエト社会主義共和国最高会議議長"
  
 #BUL-ブルガリア
+ CHARACTER_boris_iii:0 "ボリス3世"
+ CHARACTER_boris_klemens_robert_maria_pius_ludwig_stanislaus_xaver_sakskoburggotski:0 "ボリス・クレメンス・ローベルト・マリア・ピウス・スタニスラウス・クサーヴァー・サクスコブルクゴツキ"
+ CHARACTER_boris_klemens_robert_maria_pius_ludwig_stanislaus_xaver_sakskoburggotski_desc:0 "ツァール"
  CHARACTER_simeon_ii:0 "シメオン2世"
  CHARACTER_simeon_borisov_sakskoburggotski:0 "シメオン・ボリソフ・サクスコブルクゴツキ"
- CHARACTER_simeon_borisov_sakskoburggotski_desc:0 "ツァール"
+ CHARACTER_simeon_borisov_sakskoburggotski_desc:0 ""
  CHARACTER_vasil_petrov_kolarov:0 "ヴァシル・ペトロフ・コラロフ"
  CHARACTER_vasil_petrov_kolarov_desc:0 ""
  
@@ -406,6 +409,7 @@
  CHARACTER_georgios_tes_ellhadas_desc:0 "ギリシャ王"
  
 #HUN-ハンガリー
+ CHARACTER_HUN_high_national_council:0 "高等国民評議会"
  CHARACTER_zoltan_tildy:0 "ティルディ・ゾルターン"
  CHARACTER_zoltan_tildy_desc:0 "ハンガリー大統領"
  CHARACTER_arpad_szakasits:0 "サカシチ・アールパード"
