イベント画像大量追加

--- a/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
+++ b/localisation/english/countries_new_continent/geacps_BRA_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- BRA_launch_of_the_aslte_programme:0 "Launch the ASLTE Program"
+ BRA_launch_of_the_salte_programme:0 "Launch the SALTE Program"
  BRA_outlawing_of_the_communist_party:0 "Outlaw the Partido Comunista"
  BRA_army_reform:0 "Army Reform"
  BRA_improved_infantry_firepower:0 "Enhance the Infantry's Firepower"
@@ -15,25 +15,25 @@
  BRA_permission_to_form_trade_unions:0 "Allow the Formation of Workers Unions"
  BRA_decriminalisation_of_gambling:0 "Decriminalize Gambling"
  BRA_final_planning_stage:0 "Final Planning Stages"
- BRA_aslte_programs_sea:0 "Sea ASLTE Program"
+ BRA_salte_programs_sea:0 "Sea SALTE Program"
  BRA_refurbishment_of_older_vessels:0 "Refurbish Old Vessels"
  BRA_maritime_air_base:0 "Maritime Air Bases "
  BRA_cannons_of_the_great_ocean:0 "Blue-Water Cannons"
  BRA_dew_sweeper_ship:0 "Outrider Ships"
  BRA_main_shield:0 "Shielding Force"
- BRA_aslte_sky_programme:0 "Sky ASLTE Program"
+ BRA_salte_sky_programme:0 "Sky SALTE Program"
  BRA_key_to_air_combat:0 "The Key to Air Warfare"
  BRA_faster_fighter:0 "Faster Fighters"
  BRA_modern_air_force_research:0 "Research Modern Airforce"
  BRA_air_support_aircraft_research:0 "Support Aircrafts Research"
  BRA_air_assault:0 "Assault from the Skies"
- BRA_the_aslte_programme:0 "ASLTE Program"
+ BRA_salte_plan:0 "SALTE Program"
  BRA_gambling_decriminalisation:0 "Decriminalized Gambling"
  BRA_petrobras:0 "Petróleo Brasileiro S.A\nPetrobras"
- BRA.1.t:0 "ASLTE Program - Start"
+ BRA.1.t:0 "SALTE Program - Start"
  BRA.1.d:0 "The aim of this project is to promote the development of national infrastructure, medical care, and food and energy production. This will revitalize the economy as a result, using the financial stimulus to raise the people's living standards. Also, the plan includes reforms for the airforce and navy both."
  BRA.1.0:0 "For energy independence!"
- BRA.2.t:0 "ASLTE Program - Last Stages"
+ BRA.2.t:0 "SALTE Program - Last Stages"
  BRA.2.d:0 "The program has improved our people's lives and allowed the oil industry to modernize. All that remain are the airforce and navy reforms, which will be completed without incident and according to plan."
  BRA.2.0:0 "Complete the project!"
  BRA_establish_petrobras:0 "Establish Petrobras"
