--- a/localisation/japanese/countries_new_continent/geacps_BRA_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_BRA_l_japanese.yml
@@ -1,8 +1,8 @@
 ﻿l_japanese:
 #国家方針
  BRA_focus_tree:0 "[ROOT.GetName]の国家方針"
- BRA_launch_of_the_aslte_programme:0 "ASLTE計画の発動"
- BRA_launch_of_the_aslte_programme_desc:0 "TODO"
+ BRA_launch_of_the_salte_programme:0 "SALTE計画の発動"
+ BRA_launch_of_the_salte_programme_desc:0 "TODO"
  BRA_outlawing_of_the_communist_party:0 "共産党の非合法化"
  BRA_outlawing_of_the_communist_party_desc:0 "TODO"
  BRA_army_reform:0 "陸軍改革"
@@ -33,8 +33,8 @@
  BRA_decriminalisation_of_gambling_desc:0 "TODO"
  BRA_final_planning_stage:0 "計画最終段階"
  BRA_final_planning_stage_desc:0 "TODO"
- BRA_aslte_programs_sea:0 "ASLTE計画の海"
- BRA_aslte_programs_sea_desc:0 "TODO"
+ BRA_salte_programs_sea:0 "SALTE計画の海"
+ BRA_salte_programs_sea_desc:0 "TODO"
  BRA_refurbishment_of_older_vessels:0 "旧式艦の改装"
  BRA_refurbishment_of_older_vessels_desc:0 "TODO"
  BRA_maritime_air_base:0 "海上航空基地"
@@ -45,8 +45,8 @@
  BRA_dew_sweeper_ship_desc:0 "TODO"
  BRA_main_shield:0 "主力の盾"
  BRA_main_shield_desc:0 "TODO"
- BRA_aslte_sky_programme:0 "ASLTE計画の空"
- BRA_aslte_sky_programme_desc:0 "TODO"
+ BRA_salte_sky_programme:0 "SALTE計画の空"
+ BRA_salte_sky_programme_desc:0 "TODO"
  BRA_key_to_air_combat:0 "航空戦の要"
  BRA_key_to_air_combat_desc:0 "TODO"
  BRA_faster_fighter:0 "より高速な戦闘機"
@@ -59,17 +59,17 @@
  BRA_air_assault_desc:0 "TODO"
  
 #国民精神
- BRA_the_aslte_programme:0 "ASLTE計画"
+ BRA_salte_plan:0 "SALTE計画"
  BRA_gambling_decriminalisation:0 "ギャンブル非合法化"
  
 #企業
  BRA_petrobras:0 "ブラジル石油公社\nペトロブラス"
  
 #イベント
- BRA.1.t:0 "ASLTE計画-発動"
+ BRA.1.t:0 "SALTE計画-発動"
  BRA.1.d:0 "この計画は国土のインフラ整備、医療整備、食品やエネルギーの発展を促進させ、刺激することにより経済の活性化させるとともに国民の生活水準を底上げすることを念頭においたものである。計画に沿って最終的には空海軍の改革も行われることだろう。"
  BRA.1.0:0 "エネルギー独立を！"
- BRA.2.t:0 "ASLTE計画-最終段階"
+ BRA.2.t:0 "SALTE計画-最終段階"
  BRA.2.d:0 "この計画により国民の生活は豊かになり、石油産業の革新を行うことができた。残すは空海軍の改革のみとなり、計画に沿って順調に改革は完了するだろう。"
  BRA.2.0:0 "計画の完遂を！"
  
