--- a/localisation/japanese/countries_new_continent/geacps_CHL_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_CHL_l_japanese.yml
@@ -34,14 +34,14 @@
  CHL_opening_of_iron_mines_desc:0 "TODO"
  CHL_construction_of_a_sugar_processing_plant:0 "砂糖加工工場建設"
  CHL_construction_of_a_sugar_processing_plant_desc:0 "TODO"
- CHL_launch_of_the_serena_project:0 "セレナ計画の始動"
- CHL_launch_of_the_serena_project_desc:0 "TODO"
+ CHL_launch_of_the_plan_serena:0 "セレナ計画の始動"
+ CHL_launch_of_the_plan_serena_desc:0 "TODO"
  CHL_establishment_of_enap:0 "ENAPの設立"
  CHL_establishment_of_enap_desc:0 "TODO"
 
 #国民精神
  CHL_energy_independence_orientation:0 "エネルギー独立志向"
- CHL_serena_project:0 "セレナ計画"
+ CHL_plan_serena:0 "セレナ計画"
  CHL_nationalisation_of_the_gmc:0 "GCMの国有化"
  CHL_provincial_city_development:0 "地方都市開発"
  CHL_mechanisation_of_agriculture:0 "農業の機械化"
