--- a/localisation/japanese/countries_new_continent/geacps_COL_l_japanese.yml
+++ b/localisation/japanese/countries_new_continent/geacps_COL_l_japanese.yml
@@ -58,7 +58,7 @@
  COL_increased_defence_spending_desc:0 "TODO"
  
 #国民精神
- COL_merchant_fleet_of_the_grand_colombian:0 "グラン・コロンビアの商船隊"
+ COL_grand_colombian_merchant_fleet:0 "グラン・コロンビアの商船隊"
  COL_significant_defence_expenditure:0 "多額の国防費"
  COL_golden_glow:0 "黄金の輝き"
  COL_reactionism:0 "復古主義"
@@ -97,7 +97,7 @@
  COL.6.0:0 "外交で解決すべきだ"
  COL.6.1:0 "動員の準備を"
  COL.7.t:0 "「グラン・コロンビアの復活」"
- COL.7.d:0 "1820年のククタ会議により成立したグランコロンビアと呼ばれた国家は1831年に様々な要因から分裂し、その後現在のコロンビアになった。しかしながら我らはかつての領土を回収し、ここにグランコロンビアの復活を宣言した。\n連日メディアが押しかけ、その対応に追われたが、時間が過ぎ去ればそれも落ち着くだろう。
+ COL.7.d:0 "1820年のククタ会議により成立したグランコロンビアと呼ばれた国家は1831年に様々な要因から分裂し、その後現在のコロンビアになった。しかしながら我らはかつての領土を回収し、ここにグランコロンビアの復活を宣言した。\n連日メディアが押しかけ、その対応に追われたが、時間が過ぎ去ればそれも落ち着くだろう。"
  COL.7.0:0 "ついに我らは達成した！"
  
 #ディシジョン
